# system-info

./: .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/: renovate.json
.github/workflows/: build.yaml  release.yaml  release.yml
src/: lib.rs
system_info_core/: CHANGELOG.md  Cargo.toml  README.md
system_info_core/src/: cpu.rs  disk.rs  gpu.rs  host.rs  lib.rs  memory.rs  network.rs  process.rs
system_info_core/tests/: system_info_test.rs
system_info_node/: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
system_info_node/src/: lib.rs  types.rs
tests/: system_info_test.rs
