[package]
name = "puniyu_system_info"
version = "0.5.8"
edition = "2024"
description = "奈柚核心，获取系统信息"
keywords = ["system", "info"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/system_info"
repository = "https://github.com/puniyu/system_info"


[dependencies]
sysinfo = { version = "0.37.0" }
rust_decimal = { version = "1.37.2" }
gfxinfo = { version = "0.1.2", optional = true }

[features]
default = ["host", "process", "cpu", "memory","network", "disk"]
host = []
process = []
cpu = []
memory = []
network = []
disk = []
gpu = ["gfxinfo"]

[profile.release]
lto = "thin"
panic = "abort"
incremental = false

[profile.dev]
incremental = true

