[workspace]
members = [
    "system_info_core",
    "system_info_node"
]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/system_info"
repository = "https://github.com/puniyu/system_info"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }

[profile.release]
lto = "thin"
panic = "abort"
incremental = false

[profile.dev]
incremental = true

