[package]
name = "puniyu_system_info"
version = "1.5.5"
edition.workspace = true
description = "puniyu, 获取系统信息"
keywords = ["system", "info"]
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true

[dependencies]
sysinfo = { version = "0.38.0" }
chrono.workspace = true
num_cpus = "1.17.0"
serde = { version = "1", features = ["derive"] }
iana-time-zone = { version = "0.1.64", features = ["fallback"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
wmi = "0.18"
nvml-wrapper = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
io-kit-sys = "0.5"
core-foundation = "0.10"
mach2 = "0.6"

[features]
default = ["host", "process", "cpu", "memory", "network", "disk"]
host = []
process = []
cpu = []
memory = []
network = []
disk = []
gpu = []
full = ["default", "gpu"]
